--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     padding: 1rem;
     align-items: center;
     z-index: 2;
+    position: relative;
 }
 
 .header__personal {
@@ -39,6 +40,7 @@
     top: 0;
     background-color: var(--secondary-bg);
     border-bottom: 1px solid var(--accent-subtle);
+    z-index: 2;
 }
 
 .p-fixed {
